# opencv_studying

./: README.md
addweight/: CMakeLists.txt  main.cpp
adjust/: CMakeLists.txt  main.cpp
back_projection/: CMakeLists.txt  main.cpp
blur/: CMakeLists.txt  main.cpp
blur1/: CMakeLists.txt  main.cpp
border/: CMakeLists.txt  main.cpp
canculate_hist/: CMakeLists.txt  main.cpp
const/: CMakeLists.txt  main.cpp
contour/: CMakeLists.txt  main.cpp
contour_kuang/: CMakeLists.txt  main.cpp
convex_hull/: CMakeLists.txt  main.cpp
dilation/: CMakeLists.txt  main.cpp
draw/: CMakeLists.txt  main.cpp
final_test/: CMakeLists.txt  main.cpp
hist/: CMakeLists.txt  main.cpp
hist_compare/: CMakeLists.txt  main.cpp
laplace/: CMakeLists.txt  main.cpp
line/: CMakeLists.txt  main.cpp
mask/: CMakeLists.txt  main.cpp
mat/: CMakeLists.txt  main.cpp
match_template/: CMakeLists.txt  main.cpp
mymoment/: CMakeLists.txt  main.cpp
operation/: CMakeLists.txt  main.cpp
operator/: CMakeLists.txt  main.cpp
orb/: CMakeLists.txt  main.cpp
orb_test/: CMakeLists.txt  main.cpp
point/: CMakeLists.txt  main.cpp
pointandarray/: CMakeLists.txt
poly_test/: CMakeLists.txt  main.cpp
pyramid/: CMakeLists.txt  main.cpp
remap/: CMakeLists.txt  main.cpp
sobel/: CMakeLists.txt  main.cpp
threshold/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  main.cpp
